# particle-swarm

./: .clang-format  .gitignore  .gitlab-ci.yml  Makefile  README.md
.githooks/: pre-commit
graphing/: graphing.ipynb  stats.csv
local_refinement/: main.c
lu_decomposition/: Makefile  README.md  lu_decomposition.h  main.c
lu_decomposition/src/: main.c  plu_factorization.h
notes/: fit_surrogate_gen.py  lu_timings.org
opus/: .gitignore  Makefile  README.md  libpso.dylib
opus/analyze_log/: Analysis.ipynb
opus/src/: PerformanceTester.hpp  bloom.c  bloom.h  distincts.c  distincts.h  gaussian_elimination_solver.c  gaussian_elimination_solver.h  gaussian_tester.c  ge_test  helpers.c  helpers.h  latin_hypercube.c  latin_hypercube.h  local_refinement.c  local_refinement.h  logging.c  logging.h  lu_solve.c  lu_solve.h  lu_solve.s  lu_solve_tester.c  lu_test  main.c  murmurhash.c  murmurhash.h  my_papi.h  perf_ge_common.h  perf_ge_solve.cpp  perf_ge_solve.h  plu_factorization.c  plu_factorization.h  pso.c  pso.h  pso_ffi.c  pso_globals.h  rounding_bloom.c  rounding_bloom.h  timer.h  timing.c  timing.h  (+4 more)
opus_with_libs/: CMakeLists.txt
opus_with_libs/conda_env/: conda_env.yml  update_env.sh
opus_with_libs/src/: helpers.cpp  helpers.hpp  main.c  main.cpp  pso.cpp  pso.hpp  pso_globals.hpp
presentations/: README.md
presentations/05-05-2022/: presentation.rkt  progress.rkt  tree.rkt
presentations/efnv/: fish-1.rkt  fish-2.rkt  (+3 more)
scripts/: autotune.rkt
simple_pso/: Makefile  README.md
src/: main.c
test_bloom/: Makefile
tests/: Manifest.toml  Project.toml
(+82 files in other folders)
